# beihe_AR_Hi3861

./: BUILD.gn  README.md
driver/mqtt/: BUILD.gn  hal_bsp_mqtt.c
driver/spi_st7789/: BUILD.gn  hz_16x16.h  hz_32x32.h  st7789.c  st7789.h
driver/wifi/: BUILD.gn
lvgl/lvgl/: BUILD.gn  lv_conf.h  lv_conf.h~RF18fa2c91.TMP
lvgl/lvgl/src/extra/themes/default/: lv_theme_default.c
lvgl/lvgl/src/extra/widgets/: lv_widgets.h
main/: BUILD.gn  main.c
