static_library("spi_st7789") {
    sources = [
        "st7789.c"
    ]

    include_dirs = [
        ".",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
    ]
}
